<resources>
    <string name="app_name">WATTZNÜ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="see_all">See All</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="add_new">Add new</string>
    <string name="title">Title:</string>
    <string name="read_more">Read More</string>
    <string name="headlines">headlines:</string>
    <string name="_2020_12_12">2020_12_12</string>
    <string name="weather_today">Weather Today:</string>
    <string name="go_to_web_site"><![CDATA[continue to website ->]]></string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="categorizes">Categorizes</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <string name="news_sources">News Sources</string>
    <string name="weather">Weather</string>
    <string name="login">Login</string>
    <string name="sign_up">sign up</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="all">All</string>
    <string name="list">List:</string>
    <string name="favorite">Favorite</string>
    <string name="release_date">Release date:</string>
    <string name="author_name">author name</string>
    <string name="author">Author:</string>
    <string name="source_name">Source name</string>
    <string name="source">Source:</string>
    <string name="search_here">search here</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="publish_date">Publish date:</string>
    <string name="delete_all">Delete All</string>
    <string name="write_something">Write Something…</string>
    <string name="time">time</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="stop_playback">Stop Playback</string>
    <string name="_00_00">00:00</string>
    <string name="mm_ss">mm:ss</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="add_voice_note">Add Voice Note</string>
    <string name="reminder_set_at">Reminder set at:</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit:</string>
    <string name="choose_your_language">Language:</string>
    <string name="logout">logout</string>
    <string name="welcome">Welcome</string>
    <string name="city">Location</string>
    <string name="temp">temp</string>
    <string name="humidity">humidity:</string>
    <string name="wind">wind</string>
    <string name="disc">disc</string>
    <string name="see_all_categories">See All categories</string>
    <string name="items">items</string>
    <string name="hello">Hello :)</string>
    <string name="first_you_need_to_insert_youer_n_ne_mail_n_n_and_chosse_a_password_nto_countinue">First you need to insert your \n\nE-mail\n\n and choose a password\nto continue</string>
    <string name="signup">signup</string>
    <string name="important">Important</string>
    <string name="todo">ToDo</string>
    <string name="add_to_important">Add To Important</string>
    <string name="internal_parameter_cod">Internal Parameter Cod:</string>
    <string name="time_of_data_calculation">Time of Data Calculation:</string>
    <string name="timezone">Timezone:</string>
    <string name="city_id">City ID:</string>
    <string name="internal_parameter">Internal Parameter:</string>
    <string name="visibility">Visibility:</string>
    <string name="latitude_location">Latitude Location:</string>
    <string name="longitude_location">Longitude Location:</string>
    <string name="temperature">Temperature:</string>
    <string name="sea_level_hpa">Sea Level HPa:</string>
    <string name="maximum_temperature_at_the_moment">Maximum Temperature at the Moment:</string>
    <string name="minimum_temperature_at_the_moment">Minimum Temperature at the Moment:</string>
    <string name="weather_description">Weather Description:</string>
    <string name="weather_icon">Weather Icon:</string>
    <string name="weather_condition_id">Weather Condition ID:</string>
    <string name="weather_parameters_state">Weather Parameters State:</string>
    <string name="internal_parameter_message">Internal Parameter Message:</string>
    <string name="country_code">Country Code:</string>
    <string name="internal_parameter_type">Internal Parameter Type:</string>
    <string name="sunrise_time">Sunrise Time:</string>
    <string name="sunset_time">Sunset Time:</string>
    <string name="internal_parameter_id">Internal Parameter ID:</string>
    <string name="cloudiness">Cloudiness:</string>
    <string name="wind_direction">Wind Direction:</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="wind_gust">Wind Gust:</string>
    <string name="rain_1h">Rain (1h):</string>
    <string name="rain_3h">Rain (3h):</string>
    <string name="snow_1h">Snow (1h):</string>
    <string name="snow_3h">Snow (3h):</string>
    <string name="page_back">Page Back</string>
    <string name="page_forward">Page Forward</string>
    <string name="refresh_page">Refresh Page</string>
    <string name="stop_refreshing">Stop Refreshing</string>
    <string name="share">Share</string>
    <string name="banana_pancakes">Banana Pancakes</string>
    <string name="done">Done</string>
    <string name="by_choosing_a_different_language_the_app_will_restart">By choosing a different language, the app will restart</string>
    <string name="choose_your_country_for_the_top_news_sources">Choose your country for the News headlines sources</string>
    <string name="headlines_country_sources">Headlines Country sources:</string>
    <string name="delete_account">Delete account</string>
    <string name="setting_up_your_profile">Setting up your profile</string>
    <string name="now_enter_your_name_and_choose_a_profile_picture">Now\nEnter your name and choose a Profile picture\nTo finish setting-up your profile</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="continuee">Continue</string>
    <string name="profile_edit">Profile edit</string>
    <string name="click_here_to_choose_new_profile_picture">Click here to choose new profile picture</string>
    <string name="guest">Guest</string>
    <string name="forgot_your_passworrd">Forgot your passworrd?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="change_your_password">Change your password</string>
    <string name="reminder">Reminders:</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="are_you_sure_delete_all">Are you sure you want to Delete all?</string>
    <string name="yes">Yes</string>
    <string name="all_notes_are_deleted">All notes are Deleted!</string>
    <string name="the_list_is_empty">The list is empty!</string>
    <string name="todo_created">ToDo Created</string>
    <string name="text_fild_shoudnot_be_empty">Text Fields should not be empty</string>
    <string name="reminder_cleard">Reminder cleared</string>
    <string name="reminder_set_fo">Reminder set for:</string>
    <string name="reminder_remove">Remove Reminder</string>
    <string name="reminder_set">Set Reminder</string>
    <string name="enabel_mic">Enable Microphone</string>
    <string name="enabel_mic_text">To Record voice Note, please enable Microphone Permission for this app.</string>
    <string name="settings">Settings</string>
    <string name="enable_notifcation">Enable Notifications</string>
    <string name="enable_notifcation_text">To set reminders, please enable notification Permission for this app.</string>
    <string name="username_img_empty">Username or image cannot be empty</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username_empty">Profile picture and Username cannot be empty</string>
    <string name="delete_acc_text">Are you sure you want to Delete your account?\nSaved Data will be permanently deleted</string>
    <string name="logout_text">Are you sure you want to Logout?</string>
    <string name="enter_email">Please enter your email address</string>
    <string name="enter_email_to_reset">Enter your email address to reset your password</string>
    <string name="reset">Reset</string>
    <string name="reset_titel">Reset Password</string>
    <string name="articles_deleted">Articles are Deleted!</string>
    <string name="error_saving_img">Error saving image</string>
    <string name="fails_send_email">Failed to send password reset email. Please try again later.</string>
    <string name="success_send_email">Password reset email sent successfully</string>
    <string name="valid_email">Please enter a valid email address.</string>
    <string name="incorrect_password">Incorrect password. Please try again.</string>
    <string name="email_not_found">Email address not found. Please check your email.</string>
    <string name="email_exists">Email address already exists. Please use a different email.</string>
    <string name="password_length">Password must be at least 8 char, combi of letters and numbers.</string>
    <string name="article_deleted">Article Deleted!</string>
    <string name="articles_deleted_titel">Delete All Articles</string>
    <string name="deleted_article">Delete Article</string>
    <string name="deleted_article_text">Are you sure you want to Delete this Article?</string>
    <string name="article_fav">Article Added to Favorites</string>
    <string name="enabl_locatoin">Enable Location permission</string>
    <string name="enabl_locatoin_text">Location permission is Needed To be enabled to Access The weather function.</string>
    <string name="movingConfirm">Moving Confirm</string>
    <string name="no">No</string>
    <string name="movingConfirm_text1">Are you sure you want to</string>
    <string name="movingConfirm_text2">this to-do to </string>
    <string name="restore">restore</string>
    <string name="move">move</string>
    <string name="originallist">original list</string>
    <string name="DoneList">Done List</string>
    <string name="recordPlay">Another record is playing</string>
    <string name="ConfirmDeletion">Confirm Deletion</string>
    <string name="ConfirmDeletionText">Are you sure you want to delete this to-do item?</string>
    <string name="deletedtodo">Deleted!</string>
    <string name="RemainingTime">Remaining Time:</string>
    <string name="NoVoiceNoteavailable">No Voice Note available</string>
    <string name="ErrorloadingVoiceNote">Error loading Voice Note</string>
    <string name="Somethingwentwrong">Something went wrong</string>
    <string name="PlaybackIsInProgress">Playback is in progress. Stop playback to start recording.</string>
    <string name="RecordingAlreadyInProgress">Recording is already in progress.</string>
    <string name="RecordingStarted">Recording started</string>
    <string name="FailedToStartRecording">Failed to start recording</string>
    <string name="RecordingStopped">Recording stopped</string>
    <string name="RecordingIsInProgress">Recording is in progress. Stop recording to start playback.</string>
    <string name="PlaybackAlreadyInProgress">Playback is already in progress</string>
    <string name="noAudio">No audio available to play</string>
    <string name="AudioPlaying">Audio is playing</string>
    <string name="AudioPlayingError">Error occurred while playing the audio</string>
    <string name="about_us">About Us</string>
</resources>